gl51-master/src/test/deca/context/invalid/Protected1.deca
class A{
protected int x;
}

class B{
    A a = new A();
    int z = a.x; //error car x protected
}
